# hackathon_apr_2026

./: .gitignore  Makefile  README.md  analyse_utilisation.py  analyze_utilization.py  app.py  mock_data.py  project-launch.md  pyproject.toml  requirements.txt
context/: edge-case.md  operational-context.md  operational-intent.md
data/: workforce_cost.json
queries/: load-data.cypher  sample-queries.cypher
